[project]
name = "sparkvpolarvpandas"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.7"
dependencies = [
    "ipykernel>=6.29.5",
    "memory-profiler>=0.61.0",
    "pandas>=2.2.3",
    "polars>=1.13.1",
    "py4j>=0.10.9.7",
    "pyarrow>=18.0.0",
    "pyspark>=3.5.3",
    "requests>=2.32.3",
]
